vlib/v/checker/tests/import_duplicate_err.vv
import time
import time
fn main() {
	println(time.now().unix_time())
}
